# atmega328p

./: CMakeLists.txt  atmega328p.ld
cmake/: avr-gcc.cmake
package/: CMakeLists.txt
package/HAL/: CMakeLists.txt
package/HAL/inc/: gpio.h
package/HAL/src/: gpio.c
package/main/: CMakeLists.txt
package/main/src/: main.c  startup_atmega328p.c
